--- a/.gitattributes
+++ b/.gitattributes
@@ -1,3 +1,4 @@
+model/v1/artifacts/trained/** filter=lfs diff=lfs merge=lfs -text
 *.gitignore filter=lfs diff=lfs merge=lfs -text
 *.xml filter=lfs diff=lfs merge=lfs -text
 *.iml filter=lfs diff=lfs merge=lfs -text
