feat: pipeline config update
Pipeline config updated to include Dependency Parsing to the pipeline with its initial setup.
- Added parser to the pipeline
- Added default parser components settings
- Added default parser model settings

--- a/model/v2/artifacts/config/config.cfg
+++ b/model/v2/artifacts/config/config.cfg
@@ -10,7 +10,7 @@ seed = 0
 
 [nlp]
 lang = "ru"
-pipeline = ["transformer","ner"]
+pipeline = ["transformer","ner","parser"]
 batch_size = 128
 disabled = []
 before_creation = null
@@ -20,6 +20,21 @@ tokenizer = {"@tokenizers":"spacy.Tokenizer.v1"}
 vectors = {"@vectors":"spacy.Vectors.v1"}
 
 [components]
+
+[components.parser]
+moves = null
+learn_tokens = false
+update_with_oracle_cut_size = 100
+min_action_freq = 30
+
+[components.parser.model]
+@architectures = "spacy.TransitionBasedParser.v2"
+state_type = "parser"
+extra_state_tokens = false
+hidden_width = 64
+maxout_pieces = 2
+use_upper = true
+nO = null
 
 [components.ner]
 factory = "ner"
