feat: Global model update
- Implemented REL and ECAT components.
- Changed pipeline - now all components train standalone.
- Added new tasks and pipelines for Weasel.
- Added debug configs for NER and REL.
- Updated data pre-processing.

--- a/model/v2/model/config/base_config.cfg
+++ b/model/v2/model/config/base_config.cfg
@@ -10,6 +10,7 @@ gpu_allocator = "pytorch"
 
 [nlp]
 lang = "ru"
+# pipeline = ["transformer", "ner", "relation_extractor", "entity_categorizer", "lemmatizer"]
 pipeline = ["transformer", "ner", "relation_extractor"]
 batch_size = 1000
 
@@ -17,6 +18,8 @@ batch_size = 1000
 
 [components.transformer]
 factory = "transformer"
+max_batch_items = 4096
+set_extra_annotations = {"@annotation_setters":"spacy-transformers.null_annotation_setter.v1"}
 
 [components.transformer.model]
 @architectures = "spacy-transformers.TransformerModel.v3"
@@ -49,7 +52,7 @@ grad_factor = 1.0
 
 [components.relation_extractor]
 factory = "relation_extractor"
-threshold = 0.3
+threshold = 0.8
 
 [components.relation_extractor.model]
 @architectures = "rel_model.v1"
@@ -69,29 +72,75 @@ grad_factor = 1.0
 
 [components.relation_extractor.model.create_instance_tensor.get_instances]
 @misc = "rel_instance_generator.v1"
-max_length = 1000
+max_length = 50
 
 [components.relation_extractor.model.classification_layer]
 @architectures = "rel_classification_layer.v1"
 nI = null
 nO = null
 
+# [components.entity_categorizer]
+# factory = "entity_categorizer"
+# threshold = 0.8
+
+# [components.entity_categorizer.model]
+# @architectures = "ecat_model.v1"
+
+# [components.entity_categorizer.model.create_entity_tensor]
+# @architectures = "ecat_entity_tensor.v1"
+
+# [components.entity_categorizer.model.create_entity_tensor.tok2vec]
+# @architectures = "spacy-transformers.TransformerListener.v1"
+# grad_factor = 1.0
+
+# [components.entity_categorizer.model.create_entity_tensor.tok2vec.pooling]
+# @layers = "reduce_mean.v1"
+
+# [components.entity_categorizer.model.create_entity_tensor.pooling]
+# @layers = "reduce_mean.v1"
+
+# [components.entity_categorizer.model.create_entity_tensor.get_entities]
+# @misc = "ecat_entity_finder.v1"
+# target = ["LATTRIBUTE"]
+
+# [components.entity_categorizer.model.classification_layer]
+# @architectures = "ecat_classification_layer.v1"
+# nI = null
+# nO = null
+
+# # [components.morphologizer]
+# # source = "ru_core_news_sm"
+
+# [components.lemmatizer]
+# source = "ru_core_news_sm"
+
 [corpora]
 
 [corpora.train]
-@readers = "Gold_ents_Corpus.v1"
-file = ${paths.train}
+@readers = "spacy.Corpus.v1"
+path = ${paths.train}
+gold_preproc = true
+# @readers = "Gold_ents_Corpus.v1"
+# file = ${paths.train}
 max_length = 0
 
 [corpora.dev]
-@readers = "Gold_ents_Corpus.v1"
-file = ${paths.dev}
+@readers = "spacy.Corpus.v1"
+path = ${paths.dev}
+gold_preproc = true
+# @readers = "Gold_ents_Corpus.v1"
+# file = ${paths.dev}
 max_length = 0
 
 [training]
-accumulate_gradient = 3
+accumulate_gradient = 1
 dev_corpus = "corpora.dev"
 train_corpus = "corpora.train"
+dropout = 0.1
+patience = 1600000
+max_steps = 2000
+eval_frequency = 100
+annotating_components = ["ner"]
 
 [training.optimizer]
 @optimizers = "Adam.v1"
@@ -110,3 +159,11 @@ buffer = 256
 
 [initialize]
 vectors = ${paths.vectors}
+
+[training.score_weights]
+rel_micro_p = 0.0
+rel_micro_r = 0.0
+rel_micro_f = 1.0
+# ecat_micro_p = 0.0
+# ecat_micro_r = 0.0
+# ecat_micro_f = 1.0
