--- a/model/v2/model/config/ecat_config.cfg
+++ b/model/v2/model/config/ecat_config.cfg
@@ -5,12 +5,12 @@ vectors = null
 init_tok2vec = null
 
 [system]
+seed = 342
 gpu_allocator = "pytorch"
-seed = 0
 
 [nlp]
 lang = "ru"
-pipeline = ["transformer","ner","relation_extractor"]
+pipeline = ["transformer","entity_categorizer"]
 batch_size = 1000
 disabled = []
 before_creation = null
@@ -21,49 +21,27 @@ vectors = {"@vectors":"spacy.Vectors.v1"}
 
 [components]
 
-[components.ner]
-factory = "ner"
-incorrect_spans_key = null
-moves = null
-scorer = {"@scorers":"spacy.ner_scorer.v1"}
-update_with_oracle_cut_size = 100
+[components.entity_categorizer]
+factory = "entity_categorizer"
+threshold = 0.25
 
-[components.ner.model]
-@architectures = "spacy.TransitionBasedParser.v2"
-state_type = "ner"
-extra_state_tokens = false
-hidden_width = 64
-maxout_pieces = 2
-use_upper = false
-nO = null
+[components.entity_categorizer.model]
+@architectures = "ecat_model.v1"
 
-[components.ner.model.tok2vec]
-@architectures = "spacy-transformers.TransformerListener.v1"
-grad_factor = 1.0
-pooling = {"@layers":"reduce_mean.v1"}
-upstream = "*"
-
-[components.relation_extractor]
-factory = "relation_extractor"
-threshold = 0.8
-
-[components.relation_extractor.model]
-@architectures = "rel_model.v1"
-
-[components.relation_extractor.model.classification_layer]
-@architectures = "rel_classification_layer.v1"
+[components.entity_categorizer.model.classification_layer]
+@architectures = "ecat_classification_layer.v1"
 nI = null
 nO = null
 
-[components.relation_extractor.model.create_instance_tensor]
-@architectures = "rel_instance_tensor.v1"
+[components.entity_categorizer.model.create_entity_tensor]
+@architectures = "ecat_entity_tensor.v1"
 pooling = {"@layers":"reduce_mean.v1"}
 
-[components.relation_extractor.model.create_instance_tensor.get_instances]
-@misc = "rel_instance_generator.v1"
-max_length = 50
+[components.entity_categorizer.model.create_entity_tensor.get_entities]
+@misc = "ecat_entity_finder.v1"
+target = ["LATTRIBUTE"]
 
-[components.relation_extractor.model.create_instance_tensor.tok2vec]
+[components.entity_categorizer.model.create_entity_tensor.tok2vec]
 @architectures = "spacy-transformers.TransformerListener.v1"
 grad_factor = 1.0
 pooling = {"@layers":"reduce_mean.v1"}
@@ -94,34 +72,26 @@ use_fast = true
 [corpora]
 
 [corpora.dev]
-@readers = "spacy.Corpus.v1"
-path = ${paths.dev}
-gold_preproc = true
-max_length = 0
-limit = 0
-augmenter = null
+@readers = "Gold_ents_Corpus.v1"
+file = ${paths.dev}
 
 [corpora.train]
-@readers = "spacy.Corpus.v1"
-path = ${paths.train}
-gold_preproc = true
-max_length = 0
-limit = 0
-augmenter = null
+@readers = "Gold_ents_Corpus.v1"
+file = ${paths.train}
 
 [training]
 accumulate_gradient = 1
 dev_corpus = "corpora.dev"
 train_corpus = "corpora.train"
-dropout = 0.1
 patience = 1600000
 max_steps = 2000
 eval_frequency = 100
-annotating_components = ["ner"]
 seed = ${system.seed}
 gpu_allocator = ${system.gpu_allocator}
+dropout = 0.1
 max_epochs = 0
 frozen_components = []
+annotating_components = []
 before_to_disk = null
 before_update = null
 
@@ -153,13 +123,9 @@ total_steps = 20000
 initial_rate = 0.00005
 
 [training.score_weights]
-ents_f = 0.5
-ents_p = 0.0
-ents_r = 0.0
-ents_per_type = null
-rel_micro_p = 0.0
-rel_micro_r = 0.0
-rel_micro_f = 0.5
+ecat_micro_p = 0.0
+ecat_micro_r = 0.0
+ecat_micro_f = 1.0
 
 [pretraining]
 
