--- a/model/v2/model/config/ner_config.cfg
+++ b/model/v2/model/config/ner_config.cfg
@@ -10,7 +10,7 @@ seed = 0
 
 [nlp]
 lang = "ru"
-pipeline = ["transformer","ner","relation_extractor"]
+pipeline = ["transformer","ner"]
 batch_size = 1000
 disabled = []
 before_creation = null
@@ -43,32 +43,6 @@ grad_factor = 1.0
 pooling = {"@layers":"reduce_mean.v1"}
 upstream = "*"
 
-[components.relation_extractor]
-factory = "relation_extractor"
-threshold = 0.8
-
-[components.relation_extractor.model]
-@architectures = "rel_model.v1"
-
-[components.relation_extractor.model.classification_layer]
-@architectures = "rel_classification_layer.v1"
-nI = null
-nO = null
-
-[components.relation_extractor.model.create_instance_tensor]
-@architectures = "rel_instance_tensor.v1"
-pooling = {"@layers":"reduce_mean.v1"}
-
-[components.relation_extractor.model.create_instance_tensor.get_instances]
-@misc = "rel_instance_generator.v1"
-max_length = 50
-
-[components.relation_extractor.model.create_instance_tensor.tok2vec]
-@architectures = "spacy-transformers.TransformerListener.v1"
-grad_factor = 1.0
-pooling = {"@layers":"reduce_mean.v1"}
-upstream = "*"
-
 [components.transformer]
 factory = "transformer"
 max_batch_items = 4096
@@ -96,32 +70,32 @@ use_fast = true
 [corpora.dev]
 @readers = "spacy.Corpus.v1"
 path = ${paths.dev}
-gold_preproc = true
 max_length = 0
+gold_preproc = false
 limit = 0
 augmenter = null
 
 [corpora.train]
 @readers = "spacy.Corpus.v1"
 path = ${paths.train}
-gold_preproc = true
 max_length = 0
+gold_preproc = false
 limit = 0
 augmenter = null
 
 [training]
-accumulate_gradient = 1
+accumulate_gradient = 3
 dev_corpus = "corpora.dev"
 train_corpus = "corpora.train"
 dropout = 0.1
 patience = 1600000
 max_steps = 2000
 eval_frequency = 100
-annotating_components = ["ner"]
 seed = ${system.seed}
 gpu_allocator = ${system.gpu_allocator}
 max_epochs = 0
 frozen_components = []
+annotating_components = []
 before_to_disk = null
 before_update = null
 
@@ -153,13 +127,10 @@ total_steps = 20000
 initial_rate = 0.00005
 
 [training.score_weights]
-ents_f = 0.5
+ents_f = 1.0
 ents_p = 0.0
 ents_r = 0.0
 ents_per_type = null
-rel_micro_p = 0.0
-rel_micro_r = 0.0
-rel_micro_f = 0.5
 
 [pretraining]
 
