--- a/model/v2/model/config/rel_base_config.cfg
+++ b/model/v2/model/config/rel_base_config.cfg
@@ -1,22 +1,29 @@
-# This is an auto-generated partial config. To use it with 'spacy train'
-# you can run spacy init fill-config to auto-fill all default settings:
-# python -m spacy init fill-config ./base_config.cfg ./config.cfg
 [paths]
 train = null
 dev = null
-vectors = null
+raw = null
+init_tok2vec = null
+
 [system]
+seed = 342
 gpu_allocator = "pytorch"
 
 [nlp]
 lang = "ru"
-pipeline = ["transformer","ner", "relation_extractor"]
+pipeline = ["transformer", "relation_extractor"]
+disabled = []
+before_creation = null
+after_creation = null
+after_pipeline_creation = null
+tokenizer = {"@tokenizers":"spacy.Tokenizer.v1"}
 batch_size = 1000
 
 [components]
 
 [components.transformer]
 factory = "transformer"
+max_batch_items = 4096
+set_extra_annotations = {"@annotation_setters":"spacy-transformers.null_annotation_setter.v1"}
 
 [components.transformer.model]
 @architectures = "spacy-transformers.TransformerModel.v3"
@@ -25,31 +32,12 @@ tokenizer_config = {"use_fast": true}
 
 [components.transformer.model.get_spans]
 @span_getters = "spacy-transformers.strided_spans.v1"
-window = 64
-stride = 48
-
-[components.ner]
-factory = "ner"
-
-[components.ner.model]
-@architectures = "spacy.TransitionBasedParser.v2"
-state_type = "ner"
-extra_state_tokens = false
-hidden_width = 64
-maxout_pieces = 2
-use_upper = false
-nO = null
-
-[components.ner.model.tok2vec]
-@architectures = "spacy-transformers.TransformerListener.v1"
-grad_factor = 1.0
-
-[components.ner.model.tok2vec.pooling]
-@layers = "reduce_mean.v1"
+window = 128
+stride = 96
 
 [components.relation_extractor]
 factory = "relation_extractor"
-threshold = 0.5
+threshold = 0.8
 
 [components.relation_extractor.model]
 @architectures = "rel_model.v1"
@@ -69,38 +57,41 @@ grad_factor = 1.0
 
 [components.relation_extractor.model.create_instance_tensor.get_instances]
 @misc = "rel_instance_generator.v1"
-max_length = 100
+max_length = 20
 
 [components.relation_extractor.model.classification_layer]
 @architectures = "rel_classification_layer.v1"
 nI = null
 nO = null
 
+[initialize]
+
+[initialize.components]
+
 [corpora]
 
-[corpora.train]
-@readers = "spacy.Corpus.v1"
-path = ${paths.train}
-max_length = 0
-
 [corpora.dev]
-@readers = "spacy.Corpus.v1"
-path = ${paths.dev}
-max_length = 0
+@readers = "Gold_ents_Corpus.v1"
+file = ${paths.dev}
+
+[corpora.train]
+@readers = "Gold_ents_Corpus.v1"
+file = ${paths.train}
 
 [training]
-accumulate_gradient = 3
+seed = ${system.seed}
+gpu_allocator = ${system.gpu_allocator}
+dropout = 0.1
+accumulate_gradient = 1
+patience = 1600000
+max_epochs = 0
+max_steps = 2000
+eval_frequency = 100
+frozen_components = []
 dev_corpus = "corpora.dev"
 train_corpus = "corpora.train"
-
-[training.optimizer]
-@optimizers = "Adam.v1"
-
-[training.optimizer.learn_rate]
-@schedules = "warmup_linear.v1"
-warmup_steps = 250
-total_steps = 20000
-initial_rate = 5e-5
+before_to_disk = null
+logger = {"@loggers":"spacy.ConsoleLogger.v1"}
 
 [training.batcher]
 @batchers = "spacy.batch_by_padded.v1"
@@ -108,5 +99,23 @@ discard_oversize = true
 size = 2000
 buffer = 256
 
-[initialize]
-vectors = ${paths.vectors}
+[training.optimizer]
+@optimizers = "Adam.v1"
+beta1 = 0.9
+beta2 = 0.999
+L2_is_weight_decay = true
+L2 = 0.01
+grad_clip = 1.0
+use_averages = false
+eps = 0.00000001
+
+[training.optimizer.learn_rate]
+@schedules = "warmup_linear.v1"
+warmup_steps = 250
+total_steps = 20000
+initial_rate = 5e-5
+
+[training.score_weights]
+rel_micro_p = 0.0
+rel_micro_r = 0.0
+rel_micro_f = 1.0
