--- a/model/v2/model/config/rel_config.cfg
+++ b/model/v2/model/config/rel_config.cfg
@@ -1,47 +1,26 @@
 [paths]
 train = null
 dev = null
-vectors = null
+raw = null
 init_tok2vec = null
+vectors = null
 
 [system]
+seed = 342
 gpu_allocator = "pytorch"
-seed = 0
 
 [nlp]
 lang = "ru"
-pipeline = ["transformer","ner","relation_extractor"]
-batch_size = 1000
+pipeline = ["transformer","relation_extractor"]
 disabled = []
 before_creation = null
 after_creation = null
 after_pipeline_creation = null
 tokenizer = {"@tokenizers":"spacy.Tokenizer.v1"}
+batch_size = 1000
 vectors = {"@vectors":"spacy.Vectors.v1"}
 
 [components]
-
-[components.ner]
-factory = "ner"
-incorrect_spans_key = null
-moves = null
-scorer = {"@scorers":"spacy.ner_scorer.v1"}
-update_with_oracle_cut_size = 100
-
-[components.ner.model]
-@architectures = "spacy.TransitionBasedParser.v2"
-state_type = "ner"
-extra_state_tokens = false
-hidden_width = 64
-maxout_pieces = 2
-use_upper = false
-nO = null
-
-[components.ner.model.tok2vec]
-@architectures = "spacy-transformers.TransformerListener.v1"
-grad_factor = 1.0
-pooling = {"@layers":"reduce_mean.v1"}
-upstream = "*"
 
 [components.relation_extractor]
 factory = "relation_extractor"
@@ -61,7 +40,7 @@ pooling = {"@layers":"reduce_mean.v1"}
 
 [components.relation_extractor.model.create_instance_tensor.get_instances]
 @misc = "rel_instance_generator.v1"
-max_length = 50
+max_length = 20
 
 [components.relation_extractor.model.create_instance_tensor.tok2vec]
 @architectures = "spacy-transformers.TransformerListener.v1"
@@ -94,35 +73,27 @@ use_fast = true
 [corpora]
 
 [corpora.dev]
-@readers = "spacy.Corpus.v1"
-path = ${paths.dev}
-gold_preproc = true
-max_length = 0
-limit = 0
-augmenter = null
+@readers = "Gold_ents_Corpus.v1"
+file = ${paths.dev}
 
 [corpora.train]
-@readers = "spacy.Corpus.v1"
-path = ${paths.train}
-gold_preproc = true
-max_length = 0
-limit = 0
-augmenter = null
+@readers = "Gold_ents_Corpus.v1"
+file = ${paths.train}
 
 [training]
-accumulate_gradient = 1
-dev_corpus = "corpora.dev"
-train_corpus = "corpora.train"
-dropout = 0.1
-patience = 1600000
-max_steps = 2000
-eval_frequency = 100
-annotating_components = ["ner"]
 seed = ${system.seed}
 gpu_allocator = ${system.gpu_allocator}
+dropout = 0.1
+accumulate_gradient = 1
+patience = 1600000
 max_epochs = 0
+max_steps = 2000
+eval_frequency = 100
 frozen_components = []
+dev_corpus = "corpora.dev"
+train_corpus = "corpora.train"
 before_to_disk = null
+annotating_components = []
 before_update = null
 
 [training.batcher]
@@ -153,13 +124,9 @@ total_steps = 20000
 initial_rate = 0.00005
 
 [training.score_weights]
-ents_f = 0.5
-ents_p = 0.0
-ents_r = 0.0
-ents_per_type = null
 rel_micro_p = 0.0
 rel_micro_r = 0.0
-rel_micro_f = 0.5
+rel_micro_f = 1.0
 
 [pretraining]
 
