--- a/model/v2/scripts/data_processing/postprocessing/cleaner_config.yml
+++ b/model/v2/scripts/data_processing/postprocessing/cleaner_config.yml
@@ -1,3 +1,3 @@
 stopwords: ["на", "и", "в"]
-punct: [",", ".", "?", "!", "(", ")", "[", "]", "{", "}"]
+punct: [",", ".", "?", "!", "(", ")", "[", "]", "{", "}", "\"", "'"]
 trims: [" ", "-"]
