feat: Imrovements of postprocessing components
- Implemented ShapeShifter component to better adapt word forms.
- Improved JSON serialization.
- Added threshold for choosing entity category, default set to 'string' (if score is lower than threshold).

--- a/model/v2/model/config/pipeline_config.yml
+++ b/model/v2/model/config/pipeline_config.yml
@@ -3,6 +3,7 @@ rel: "model/training/rel/model-best"
 ecat: "model/training/ecat/model-best"
 
 rel_threshold: 0.8
+ecat_threshold: 0.8
 
 cleaner_config: "scripts/data_processing/postprocessing/cleaner_config.yml"
 merger_config: "scripts/data_processing/postprocessing/merger_config.yml"
