--- a/app/be/build.gradle
+++ b/app/be/build.gradle
@@ -1,5 +1,6 @@
 plugins {
 	id 'java'
+	id 'idea'
 	id 'org.springframework.boot' version '3.2.5'
 	id 'io.spring.dependency-management' version '1.1.4'
 }
@@ -10,6 +11,8 @@ version = '0.1.0'
 java {
 	sourceCompatibility = '17'
 }
+
+apply plugin: "idea"
 
 configurations {
 	compileOnly {
