--- a/app/be/src/main/resources/application.yml
+++ b/app/be/src/main/resources/application.yml
@@ -7,8 +7,8 @@ spring:
   datasource:
     driver-class-name: org.postgresql.Driver
     type: com.zaxxer.hikari.HikariDataSource
-    jdbc-url: jdbc:postgresql://localhost:5432/dmbg
-    username: "dmbg"
+    jdbc-url: jdbc:postgresql://localhost:5432/dbmg
+    username: "dbmg"
     password: "dbmg"
     maximumPoolSize: 20
     minimumIdle: 5
@@ -43,14 +43,16 @@ spring:
     openfeign:
       client:
         config:
-          model-service-client:
+          ai-service-client:
             connectTimeout: 10000
             readTimeout: 600000
 
 rest-client:
-  model-service:
+  ai-service:
     url: http://localhost:8005
 
-dmbg:
+dbmg:
   task:
     polling-interval: 30
+    max-parallel-tasks: 10
+    max-queue-size: 20
